--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "f378e0a8-b44e-4406-8441-6e2dc36d9674"
 authors = ["Dale-Black <djblack@uci.edu> and contributors"]
 version = "0.1.0"
 
+[deps]
+HypertextLiteral = "ac1192a8-f4b3-4bfe-ba22-af5b92cd3ab2"
+
 [compat]
 julia = "1.8"
 
